# raflow

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES.md  about-native.md  about.hbs  about.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/raflow-app/: Cargo.toml
crates/raflow-app/examples/: popover_demo.rs
crates/raflow-app/src/: accessibility.rs  correction_popover.rs  floating_overlay.rs  input_source.rs  lib.rs  main.rs  permissions.rs  settings.rs
crates/raflow-audio/: Cargo.toml
crates/raflow-audio/src/: lib.rs
crates/raflow-core/: Cargo.toml
crates/raflow-core/src/: audio.rs  error.rs  hotkey.rs  lib.rs  transcript.rs
crates/raflow-hotkey/: Cargo.toml
crates/raflow-hotkey/src/: activity.rs  double_tap.rs  lib.rs  nsevent_monitor.rs
crates/raflow-input/: Cargo.toml
crates/raflow-input/src/: lib.rs
crates/raflow-speech/: Cargo.toml
crates/raflow-speech/examples/: bench_harness.rs  rolling_harness.rs  vad_harness.rs
crates/raflow-speech/src/: apple_backend.rs  backend.rs  lib.rs  session.rs  term_restore.rs  whisper_backend.rs
packaging/: Info.plist  create-dev-cert.sh
packaging/icons/: icon.icns
