[package]
name = "raflow-app"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "raflow 主程式（Phase 4: CLI 原型；Phase 6 擴充為 Tauri）"

[[bin]]
name = "raflow"
path = "src/main.rs"

[features]
default = []
# Phase 5：透傳 whisper feature 到 raflow-speech，讓 final 文字走 Whisper 終校。
# 詳見 docs/spec/whisper.md。
whisper = ["raflow-speech/whisper"]

[dependencies]
raflow-core.workspace = true
raflow-hotkey = { path = "../raflow-hotkey" }
raflow-audio = { path = "../raflow-audio" }
raflow-speech = { path = "../raflow-speech" }
raflow-input = { path = "../raflow-input" }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
serde.workspace = true
serde_json.workspace = true
arc-swap.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
tao.workspace = true
tray-icon.workspace = true
image.workspace = true
block2 = { workspace = true }
objc2 = { workspace = true }
# 麥克風授權查詢/請求（AVCaptureDevice），供首次啟動權限引導。見 ADR-0008。
objc2-av-foundation = { workspace = true, features = [
    "AVCaptureDevice",
    "AVMediaFormat",
    # requestAccessForMediaType_completionHandler 需 block2 completion handler。
    "block2",
] }
objc2-app-kit = { workspace = true, features = [
    "NSApplication",
    "NSResponder",
    "NSPanel",
    "NSWindow",
    "NSTextField",
    "NSText",
    "NSView",
    "NSControl",
    "NSColor",
    "NSScreen",
    # NSEvent::mouseLocation（modal 置中到游標所在螢幕，correction_popover.rs）。明確啟用，
    # 不依賴 NSResponder/NSApplication 的傳遞性帶入。
    "NSEvent",
    "NSGraphics",
    "NSAttributedString",
    "NSFont",
    "NSFontDescriptor",
    "NSParagraphStyle",
    # D1 更正擷取 popover（correction_popover.rs，ADR-0005）
    "NSAlert",
    "NSComboBox",
    "NSButton",
    "NSCell",
    "NSMenu",
    "NSMenuItem",
] }
objc2-foundation = { workspace = true, features = [
    "NSThread",
    "NSGeometry",
    "NSString",
    "NSAttributedString",
    "NSDictionary",
    "NSEnumerator",
    "NSDate",
    "NSObject",
] }
objc2-application-services = { workspace = true, features = [
    "AXUIElement",
    "AXError",
] }
objc2-core-foundation = { workspace = true, features = [
    "CFBase",
    "CFString",
] }
