[package]
name = "raflow-hotkey"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "raflow 全域快捷鍵：雙擊 Cmd 偵測（macOS NSEvent global monitor）"

[dependencies]
raflow-core.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["NSEvent", "NSResponder", "objc2-core-graphics"] }
objc2-core-graphics = { workspace = true, features = ["CGEventTypes"] }
objc2-foundation = { workspace = true, features = ["NSObject"] }
block2.workspace = true
